--- a/src/assets/custom.css
+++ b/src/assets/custom.css
@@ -37,6 +37,10 @@
   right: 20px;
 }
 
+.app-links .loaded {
+  margin: auto !important;
+}
+
 .map-canvas img {
   width: 100%;
   height: 100%;
